--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "apikey": "",
+    "apikey": "9b817532fadff8fc7cb86862",
     "prefix": "/",
-    "owner": "62895418200111"
+    "owner": "6285156102929"
 }
